# thinktok

./: .gitignore  CLAUDE.md  Makefile  database.py  ecosystem.json  main.py  models.py  pyproject.toml  requirements.txt  test_sentinel.html
dev/: get_related.py
routers/: auth.py  feed.py  interactions.py  profile.py  tracking.py
services/: recommendation_service.py  wiki_service.py
static/css/: feed.css  style.css
static/js/: app.js  feed.js
templates/: feed.html  index.html  login.html  profile.html
templates/partials/: comment_list.html  feed_items.html  like_button.html  single_comment.html
