[project]
name = "thinktok-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Jemmy Febryan",email = "danieljemmyfebryan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.128.8,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "wikipedia-api (>=0.9.0,<0.10.0)",
    "sqlalchemy[asyncio] (>=2.0.0,<3.0.0)",
    "aiosqlite (>=0.20.0,<0.21.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
